# Projeto-RPG-2D

./: .gitignore  pyproject.toml
static/CSS/: base.css  game.css  ui.css
static/CSS/UI-CSS/: chat_panel.css  enemy_panel.css  general-ui.css  itens_shorcut.css  menu.css  user_panel.css
static/js/: battle.js  enemy.js  events.js  game.js  monster.js  player.js  utils.js
templates/: index.html
templates/game/: game.html
templates/ui/: chat.html  enemy_panel.html  itens_shorcut.html  menu.html  user_panel.html
